syntax = "proto3";
package headscale.v1;
option  go_package = "github.com/ori-edge/headscale/gen/go/v1";

message ACLPolicy {
    repeated ACLGroup    groups         = 1;
    repeated ACLHost     hosts          = 2;
    repeated ACL         acls           = 3;
    ACLAutoApprovers     auto_approvers = 4;
    repeated ACLTagOwner tag_owners     = 5;
}

message Protocol {
    //nolint
    enum Enum {
        ANY  = 0;
        TCP  = 1;
        UDP  = 2;
        ICMP = 3;
    }
}

message ACL {
    //nolint
    enum Action {
        UNKNOWN = 0;
        ACCEPT  = 1;
    }
    Action          action       = 1;
    Protocol.Enum   protocol     = 2;
    repeated string sources      = 3;
    repeated string destinations = 4;
}

message ACLGroup {
    string          name  = 1;
    repeated string users = 2;
}

message ACLHost {
    string name       = 1;
    string cidr_block = 2;
}
message ACLTagOwner {
    string          tag   = 1;
    repeated string users = 2;
}

message ACLAutoApprovers {
    repeated ACLRoutes routes     = 1;
    repeated string    exit_nodes = 2;
}

message ACLRoutes {
    string          route = 1;
    repeated string users = 2;
}

message CreateACLPolicyRequest {
    string    user       = 1;
    ACLPolicy acl_policy = 2;
}

message CreateACLPolicyResponse {
}
